AWS/terraform-modules/ec2-module-2/main.tf
terraform {
    required_version = ">= 0.12"
}

resource "aws_instance" "ec2_module_2" {
    ami = var.ami_id
    instance_type = var.instance_type
    key_name = "terraform-key-2"
    vpc_security_group_ids = [aws_security_group.main-sg.id] 
    tags = {
      Name = "EC2-webserver-2"
    }
    
    user_data = <<-EOF
        #!/bin/bash
        sudo apt-get update -y
        sudo apt-get install -y apache2
        sudo systemctl status apache2
        sudo systemctl enable apache2
        sudo systemctl start apache2
        sudo chown -R $USER:$USER /var/www/html
        sudo echo "<h1>Welcome to Jhooq Module 2 Guysss!!!!!</h1> > /var/www/html/index.html
        EOF
}

resource "aws_security_group" "main-sg" {
    name = "EC2-webserver-SG-2"
    description = "Webserver Security Group"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["213.4.127.18/32"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}


resource "aws_key_pair" "terraform_key-2" {
    key_name = "terraform-key-2"
    public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDsEkqGSbIkpLgu5iF2y7y7H0CD8uTEkpo1KfZ512AFm8P31Eb/ixi8Sx8CT0PVXlNaTSPkzyUqJ8suLWuj9zcTJpnz2saDcctzD31kaBqBbg/YkBrBa+8GXfRMkojhTIO0wEA9tL/uSl2pU9IG/IA1wGWpw3MKIirjrqGkR9JKfFpKNLOb82GsOEdz+f2bq0zKDgzmSY9I8BLMEaHa4olCFyDxgUiySnjRUYrgCcYeBJm1mNAKsA6Otp2YSyZbbSbUyyaaFjFM0h0HR8BzUZtZJ9EOTHsFpTuLJF252tnE19CDKR9VqmX0yqykE6Dhm/Q7tqgILBm5esHUd7uO/CO72/MWdgQFpNBHOw0FcmM2eYWPzNPQq5enpKYsTl4MWqpLEkjwV3UU1lHbzIfXAsWmhFos/Pj5dlgGIzqCiSarG0WQLqBmFzw3xec6t3 [...]
}
